--- a/style/sass/_footer.scss
+++ b/style/sass/_footer.scss
@@ -6,10 +6,10 @@
     float: left;
     list-style-type: none;
     padding: 0;
-  	width: 100%;
+    width: 100%;
     li {
-    	display: inline-block;
-    	padding: 0 10px 0 10px;
+      display: inline-block;
+      padding: 0 10px;
       vertical-align: top;
       img {
         -moz-border-radius: 75px;
@@ -27,42 +27,42 @@
 }
 
 .footnote {
-	width: 100%;
-	display: inline-block;
-	padding-left: 0;
-	padding-right: 0;
-	text-align: center;
+  width: 100%;
+  display: inline-block;
+  padding-left: 0;
+  padding-right: 0;
+  text-align: center;
   p {
-  	width: 60%;
-  	font-size: .8em;
-  	text-align: center;
-  	display: inline-block;
-  	margin-bottom: .5em;
+    width: 60%;
+    font-size: .8em;
+    text-align: center;
+    display: inline-block;
+    margin-bottom: .5em;
   }
   .light a {
-  	color: $blue-gray;
+    color: $blue-gray;
   }
 }
 
 // Not currently in index.html
 .socialfooter {
-	margin-top: 0;
-	width: 100%;
-	text-align: center;
-	padding-right: 0;
-	margin-right: 0;
+  margin-top: 0;
+  width: 100%;
+  text-align: center;
+  padding-right: 0;
+  margin-right: 0;
 }
 
 /* Mobile */
 @media (max-width: 480px) and (min-width: 321px) {
   .footer {
-  	display: block;
-  	float: left;
-  	margin: 1em ;
+    display: block;
+    float: left;
+    margin: 1em ;
     p {
       display: inline-block;
-    	font-size: .8em;
-    	margin-bottom: .5em;
+      font-size: .8em;
+      margin-bottom: .5em;
       width: 100%;
       text-align: center;
     }
