--- a/style/sass/shop.scss
+++ b/style/sass/shop.scss
@@ -19,105 +19,102 @@ h6 {
     color: #42459d; /* #818c97; */
     text-align: center;
 }
-ul, ol, dl, blockquote {
-    margin-top: 0;
-    margin-bottom: 0;
-}
+// ul, ol, dl, blockquote {
+//     margin-top: 0;
+//     margin-bottom: 0;
+// }
+//
+// ul, li {
+//   color: #697480;
+//   list-style: disc;
+//   line-height: 1.5em;
+//   list-style-position: inside;
+//   -webkit-font-smoothing: antialiased;
+// }
+//
+// a, a:visited {
+//   color: #42459d;
+//   text-decoration: underline;
+// }
+//
+// a:hover {
+//   opacity: 0.7;
+//   text-decoration: none;
+// }
 
-ul, li {
-  color: #697480;
-  list-style: disc;
-  line-height: 1.5em;
-  list-style-position: inside;
-  -webkit-font-smoothing: antialiased;
-}
 
-a, a:visited {
-  color: #42459d;
-  text-decoration: underline;
-}
-
-a:hover {
-  opacity: 0.7;
-  text-decoration: none;
-}
-
-.fb {
-  width: 130px;
-  padding-top: 7px;
-}
-
-.twitter-share-button {
-  margin-right: 5px;
-}
-
+// Social Styling
 .social {
-  width: 100%;
-  text-align: right;
-  position: fixed;
   margin-right: 0;
   padding-right: 20px;
+  position: fixed;
+  text-align: right;
+  width: 100%;
+  .fb {
+    padding-top: 7px;
+    width: 130px;
+  }
+  .twitter-share-button {
+    margin-right: 5px;
+  }
 }
 
-.price-tag {
-  font-family: KievitWebPro-Bold;
-  font-size: 2em;
-  line-height: 1em;
-  text-align: center;
-  position: absolute;
-  top: 17px;
-  left: 277px;
-  color: #fff;
-  background-color: #F4B400;
-  -moz-border-radius: 600px;
-  -webkit-border-radius: 600px;
-  -khtml-border-radius: 600px;
-  border-radius: 600px;
-  padding: 24px 23px 22px 23px;
-}
-
+// Hero Styling
 .hero {
-  background-color: #3d99de;
-  background-image: url('../assets/images/typoguide-cover.svg');
-  background-position: absolute;
+  background: #3d99de url('../../assets/images/typoguide-cover.svg') no-repeat;
   background-position-x: 320px;
   background-position-y: 60px;
-  background-repeat: no-repeat;
+  display: block;
   height: 420px;
+  .price-tag {
+    font-family: KievitWebPro-Bold;
+    font-size: 2em;
+    line-height: 1em;
+    text-align: center;
+    position: absolute;
+    top: 17px;
+    left: 277px;
+    color: #fff;
+    background-color: #F4B400;
+    -moz-border-radius: 600px;
+    -webkit-border-radius: 600px;
+    -khtml-border-radius: 600px;
+    border-radius: 600px;
+    padding: 24px 23px 22px 23px;
+  }
+  h1 {
+    color: #fff;
+    font-family: KievitWebPro-Black;
+    font-size: 50px;
+    line-height: 1.2em;
+    margin: 0 0 0 610px;
+    padding-top: 110px;
+    text-align: left;
+    width: 100%;
+  }
+  h6 {
+    font-family: KievitWebPro;
+    font-weight: normal;
+    font-style: italic;
+    font-size: 16px;
+    line-height: 1.5em;
+    margin: 1.3em 0 0 610px;
+    padding-top: 0px;
+    text-align: left;
+    border-bottom: none;
+  }
+  ul,li {
+    color: #fff;
+    margin-top: 0;
+    list-style: none;
+  }
 }
 
-.hero h1 {
-  color: #fff;
-  font-family: KievitWebPro-Black;
-  font-size: 50px;
-  /* letter-spacing: -1px; */
-  line-height: 1.2em;
-  margin-top: 0;
-  margin-left: 610px;
-  margin-bottom: 0;
-  padding-top: 110px;
-  text-align: left;
-}
 
-.hero h6 {
-  font-family: KievitWebPro;
-  font-weight: normal;
-  font-style: italic;
-  font-size: 16px;
-  /* letter-spacing: -1px; */
-  line-height: 1.5em;
-  margin-left: 610px;
-  margin-top: 1.3em;
-  padding-top: 0px;
-  text-align: left;
-  border-bottom: none;
-}
 
-.hero ul,li {
-  color: #fff;
-  margin-top: 0;
-  list-style: none;
-}
+
+
+
 
 .posters {
   height: 500px;
